css fix to header overlapping article content

--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -5,7 +5,7 @@
   right: 0;
   left: 0;
   height: 72px;
-  z-index: 50;
+  z-index: 200;
 
   .content {
     position: relative;
